--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,22 @@
 body{
-    color: aquamarine;
-    font-size: large;
-    font-family: Arial, Helvetica, sans-serif; 
+    color: #033;
     text-align: center;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif; 
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+.container h1{
+    font-size: 20px;
 }
