--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
     color: #033;
     text-align: center;
     font-size: 16px;
-    font-family: 'Courier New', Courier, monospace; 
+    font-family: Arial, Helvetica, sans-serif; 
     margin: 0;
     padding: 0;
 }
