Modifique la cabecera y el color del texto

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    color: #033;
+    color: red;
     text-align: center;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif; 
